<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.duydev.lab01.FourthActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/red"
        android:padding="10sp"
        android:text="@string/red"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:background="@color/orange"
        android:padding="10sp"
        android:text="@string/orange"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:background="@color/yellow"
        android:padding="10sp"
        android:text="@string/yellow"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:background="@color/green"
        android:padding="10sp"
        android:text="@string/green"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:background="@color/blue"
        android:padding="10sp"
        android:text="@string/blue"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6"
        android:background="@color/indigo"
        android:padding="10sp"
        android:text="@string/indigo"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/textView7"
        android:layout_toStartOf="@+id/textView7"
        android:background="@color/violet"
        android:padding="10sp"
        android:text="@string/violet"
        android:textSize="24sp" />
</RelativeLayout>
